Always use if with braces
Even when it's one-liner